--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "",
+  "name": "bakashvili-solutions-website",
   "version": "1.0.0",
   "description": "A blank template to get started with Payload 3.0",
   "license": "MIT",
@@ -15,13 +15,15 @@
     "start": "cross-env NODE_OPTIONS=--no-deprecation next start",
     "test": "pnpm run test:int && pnpm run test:e2e",
     "test:e2e": "cross-env NODE_OPTIONS=\"--no-deprecation --no-experimental-strip-types\" pnpm exec playwright test",
-    "test:int": "cross-env NODE_OPTIONS=--no-deprecation vitest run --config ./vitest.config.mts"
+    "test:int": "cross-env NODE_OPTIONS=--no-deprecation vitest run --config ./vitest.config.mts",
+    "db:seed": "cross-env NODE_OPTIONS=--no-deprecation payload run src/db/seed.ts"
   },
   "dependencies": {
     "@payloadcms/db-postgres": "3.56.0",
     "@payloadcms/next": "3.56.0",
     "@payloadcms/payload-cloud": "3.56.0",
     "@payloadcms/richtext-lexical": "3.56.0",
+    "@payloadcms/translations": "^3.56.0",
     "@payloadcms/ui": "3.56.0",
     "@radix-ui/react-slot": "^1.2.3",
     "@tailwindcss/postcss": "^4.1.13",
@@ -30,6 +32,7 @@
     "cross-env": "^7.0.3",
     "dotenv": "16.4.7",
     "graphql": "^16.8.1",
+    "ka": "^0.0.1",
     "lucide-react": "^0.544.0",
     "next": "15.4.4",
     "payload": "3.56.0",
