--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@payloadcms/db-postgres": "3.56.0",
     "@payloadcms/next": "3.56.0",
     "@payloadcms/payload-cloud": "3.56.0",
+    "@payloadcms/plugin-seo": "^3.56.0",
     "@payloadcms/richtext-lexical": "3.56.0",
     "@payloadcms/translations": "^3.56.0",
     "@payloadcms/ui": "3.56.0",
