feat: added Header globals with its corresponding elements

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "bakashvili-solutions-website",
+  "name": "owninn-website",
   "version": "1.0.0",
   "description": "A blank template to get started with Payload 3.0",
   "license": "MIT",
