feat: created Search component, Category collection and Hero block config, other utils

--- a/package.json
+++ b/package.json
@@ -22,10 +22,15 @@
     "@payloadcms/db-postgres": "3.56.0",
     "@payloadcms/next": "3.56.0",
     "@payloadcms/payload-cloud": "3.56.0",
+    "@payloadcms/plugin-form-builder": "^3.56.0",
+    "@payloadcms/plugin-nested-docs": "^3.56.0",
+    "@payloadcms/plugin-redirects": "^3.56.0",
+    "@payloadcms/plugin-search": "^3.56.0",
     "@payloadcms/plugin-seo": "^3.56.0",
     "@payloadcms/richtext-lexical": "3.56.0",
     "@payloadcms/translations": "^3.56.0",
     "@payloadcms/ui": "3.56.0",
+    "@radix-ui/react-label": "^2.1.7",
     "@radix-ui/react-slot": "^1.2.3",
     "@tailwindcss/postcss": "^4.1.13",
     "class-variance-authority": "^0.7.1",
