--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   },
   "dependencies": {
     "@payloadcms/db-postgres": "3.56.0",
+    "@payloadcms/live-preview-react": "^3.56.0",
     "@payloadcms/next": "3.56.0",
     "@payloadcms/payload-cloud": "3.56.0",
     "@payloadcms/plugin-form-builder": "^3.56.0",
